force-app/src/objects/AccreditationHistorySetting__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldAPINames__c</fullName>
        <label>Field API Names</label>
        <length>3060</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectTypeName__c</fullName>
        <label>SObjectType Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Accreditation History Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SObjectTypeName__c</columns>
        <columns>FieldAPINames__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Accreditation History Settings</pluralLabel>
</CustomObject>